# graph-sync-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  copier.yml  pyproject.toml  worai.toml  worai.toml.jinja
.github/workflows/: graph-sync.yml  graph-sync.yml.jinja  template-smoke.yml
docs/: INDEX.md  QUICKSTART.md  STATE_OF_ART.md  TEMPLATE_SETUP.md  WORAI_TOML_EXAMPLES.md
profiles/_base/: postprocessors.example.toml
profiles/default/: exports.toml.j2
profiles/default/mappings/: default.yarrrml.j2
profiles/default/templates/: 1_organization.ttl.j2  20_organization.ttl.j2  20_website.ttl.j2  2_website.ttl.j2  40_organization_postal_address.ttl.j2
scripts/: smoke_render_template.sh
specs/: INDEX.md
specs/graph-sync/: AGENTS.md  INDEX.md  agent-working-agreement.md  ci-checklist.md  developer-agent-workflow.md  implementation-playbook.md  mappings.md  overview.md  postprocessors-authoring.md  postprocessors.md  static-entity-ids.md  static-templates.md  troubleshooting.md
src/acme_kg/enrichment/: youtube.py
src/acme_kg/postprocessors/: __init__.py  youtube.py
tests/: test_runtime_assets.py  test_template_smoke.py  test_youtube_runtime.py
