[project]
name = "graph-build-template"
version = "4.12.0"
description = "Copier template for worai graph sync projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2text>=2020.1.17",
    "rdflib>=7.1.4",
    "wordlift-sdk>=5.3.0,<6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.uv]
package = true
