[project]
name = "graph-build-template"
version = "6.3.0"
description = "Copier template for worai graph sync projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html2text>=2020.1.17",
    "rdflib>=7.1.4",
    "wordlift-sdk>=6.15.1,<7.0.0",
]

[dependency-groups]
dev = [
    "copier>=9.10.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.uv]
package = true
